// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details expander matches snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Details
    className=""
    expander={true}
    text="Test Text"
>
    Test Text
</Details>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <summary
          className="nhsuk-details__summary"
>
          <span
                    className="nhsuk-details__summary-text"
          >
                    Test Text
          </span>
</summary>,
        <div
          className="nhsuk-details__text"
>
          Test Text
</div>,
      ],
      "className": "nhsuk-details nhsuk-expander ",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="nhsuk-details__summary-text"
>
            Test Text
</span>,
          "className": "nhsuk-details__summary",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Test Text",
            "className": "nhsuk-details__summary-text",
          },
          "ref": null,
          "rendered": "Test Text",
          "type": "span",
        },
        "type": "summary",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Test Text",
          "className": "nhsuk-details__text",
        },
        "ref": null,
        "rendered": "Test Text",
        "type": "div",
      },
    ],
    "type": "details",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <summary
            className="nhsuk-details__summary"
>
            <span
                        className="nhsuk-details__summary-text"
            >
                        Test Text
            </span>
</summary>,
          <div
            className="nhsuk-details__text"
>
            Test Text
</div>,
        ],
        "className": "nhsuk-details nhsuk-expander ",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="nhsuk-details__summary-text"
>
              Test Text
</span>,
            "className": "nhsuk-details__summary",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Test Text",
              "className": "nhsuk-details__summary-text",
            },
            "ref": null,
            "rendered": "Test Text",
            "type": "span",
          },
          "type": "summary",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Test Text",
            "className": "nhsuk-details__text",
          },
          "ref": null,
          "rendered": "Test Text",
          "type": "div",
        },
      ],
      "type": "details",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Details normal matches snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Details
    className=""
    expander={false}
    text="Test Text"
>
    Test Text
</Details>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <summary
          className="nhsuk-details__summary"
>
          <span
                    className="nhsuk-details__summary-text"
          >
                    Test Text
          </span>
</summary>,
        <div
          className="nhsuk-details__text"
>
          Test Text
</div>,
      ],
      "className": "nhsuk-details  ",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="nhsuk-details__summary-text"
>
            Test Text
</span>,
          "className": "nhsuk-details__summary",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Test Text",
            "className": "nhsuk-details__summary-text",
          },
          "ref": null,
          "rendered": "Test Text",
          "type": "span",
        },
        "type": "summary",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Test Text",
          "className": "nhsuk-details__text",
        },
        "ref": null,
        "rendered": "Test Text",
        "type": "div",
      },
    ],
    "type": "details",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <summary
            className="nhsuk-details__summary"
>
            <span
                        className="nhsuk-details__summary-text"
            >
                        Test Text
            </span>
</summary>,
          <div
            className="nhsuk-details__text"
>
            Test Text
</div>,
        ],
        "className": "nhsuk-details  ",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="nhsuk-details__summary-text"
>
              Test Text
</span>,
            "className": "nhsuk-details__summary",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Test Text",
              "className": "nhsuk-details__summary-text",
            },
            "ref": null,
            "rendered": "Test Text",
            "type": "span",
          },
          "type": "summary",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Test Text",
            "className": "nhsuk-details__text",
          },
          "ref": null,
          "rendered": "Test Text",
          "type": "div",
        },
      ],
      "type": "details",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
